@@ -2,4 +2,7 @@ mypydir = $(pythondir)/omega
 mypy_PYTHON = \
    __init__.py \
    base.py \
-   gtkThread.py
+   gtkThread.py \
+   gtkUtil.py \
+   stamps.py
+
