@@ -1,4 +1,7 @@
 # OmegaPlot main module
 
 from base import *
+
 import gtkThread
+import gtkUtil
+import stamps
